# clean-architecture-rust

./: .env  .env.test  .gitignore  Cargo.toml  README.md  diesel.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
crates/adapters-api/: Cargo.toml
crates/adapters-api/src/cat_facts/: cat_facts_controllers.rs  cat_facts_mappers.rs
crates/adapters-api/src/dog_facts/: dog_facts_controllers.rs  dog_facts_mappers.rs
crates/adapters-api/src/shared/: app_state.rs  error_presenter.rs  routes.rs
crates/adapters-spi-db/: Cargo.toml
crates/adapters-spi-db/src/: db_dog_facts_repository.rs  db_mappers.rs  lib.rs
crates/adapters-spi-db/src/db/: db_dog_facts_repository.rs  db_mappers.rs  models.rs
crates/adapters-spi-http/: Cargo.toml
crates/adapters-spi-http/src/: http_cat_facts_repository.rs  http_mappers.rs
crates/adapters-spi-http/src/http/: http_cat_facts_repository.rs  http_mappers.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/app-core/src/gateways/: cat_facts.rs  dog_facts.rs
crates/app-core/src/mappers/: gateway.rs  mod.rs  service.rs
crates/app-core/src/services/: auth.rs  database.rs  mod.rs
crates/app-core/src/services/persistence/: cat_repo.rs  dog_repo.rs  mod.rs
crates/app-core/src/usecases/: get_all_cat_facts.rs  get_all_dog_facts.rs  get_one_dog_fact_by_id.rs  get_one_random_cat_fact.rs  interfaces.rs  mod.rs
crates/app-core/src/utils/: error_handling_utils.rs
crates/app-domain/src/: cat_fact_entity.rs  error.rs
crates/app-domain/src/entities/: cat_fact.rs  mod.rs
crates/app-web/: Cargo.toml
crates/app-web/src/: lib.rs
crates/app-web/tests/integration_tests/: test_cat_facts.rs  test_dog_facts.rs
crates/app-web/tests/integration_tests/fixtures/: fixtures_run.rs  fixtures_struct.rs
crates/app-web/tests/utils/: test_context.rs  utils_setup.rs
crates/application/: Cargo.toml
crates/application/src/mappers/: mod.rs  spi_mapper.rs
crates/application/src/repositories/: cat_facts.rs  dog_facts.rs
crates/application/src/usecases/: get_all_cat_facts.rs  get_all_dog_facts.rs  get_one_dog_fact_by_id.rs  get_one_random_cat_fact.rs  interfaces.rs
crates/application/src/utils/: error_handling_utils.rs
crates/business/: Cargo.toml
crates/business/src/: lib.rs
crates/business/src/gateways/: cat_facts.rs  dog_facts.rs
crates/business/src/mappers/: mod.rs
crates/business/src/usecases/: get_all_cat_facts.rs  get_all_dog_facts.rs  get_one_dog_fact_by_id.rs  get_one_random_cat_fact.rs  interfaces.rs  mod.rs
crates/business/src/utils/: error_handling_utils.rs
crates/gateway-http/: Cargo.toml
crates/gateway-http/src/: cat_facts_gateway.rs  lib.rs  mappers.rs
crates/gateway-pg/: Cargo.toml
crates/gateway-pg/src/: connection.rs  dog_facts_gateway.rs  lib.rs  mappers.rs  models.rs  tmp.rs
crates/main-web/: Cargo.toml
crates/main-web/src/: lib.rs
crates/main-web/tests/integration_tests/: test_cat_facts.rs  test_dog_facts.rs
crates/main-web/tests/integration_tests/fixtures/: cat_facts.json  fixtures_run.rs  fixtures_struct.rs
crates/main-web/tests/utils/: mod.rs  utils_setup.rs
crates/presenter-rest/: Cargo.toml
crates/presenter-rest/src/: lib.rs
crates/presenter-rest/src/cat_facts/: cat_facts_controllers.rs  cat_facts_mappers.rs  controllers.rs  mappers.rs  mod.rs  presenters.rs
crates/presenter-rest/src/dog_facts/: controllers.rs  dog_facts_controllers.rs  dog_facts_mappers.rs  mappers.rs  mod.rs
crates/presenter-rest/src/shared/: app_state.rs  error.rs  error_presenter.rs  routes.rs
crates/presenter-web/: Cargo.toml
crates/presenter-web/src/cat_facts/: cat_facts_controllers.rs  cat_facts_mappers.rs
crates/presenter-web/src/dog_facts/: dog_facts_controllers.rs  dog_facts_mappers.rs
crates/presenter-web/src/shared/: error_presenter.rs
crates/service-auth/: Cargo.toml
crates/service-auth/src/: cat_facts_service.rs  lib.rs  mappers.rs
crates/service-db/: Cargo.toml  sqlx-data.json
crates/service-db/migrations/: 20220501133226_init.down.sql
crates/service-db/src/: db_service.rs  lib.rs  mappers.rs  models.rs
migrations/: 20220501133226_init.up.sql
src/: lib.rs  main.rs
src/infrastructure/: mod.rs
tests/integration_tests/: test_cat_facts.rs  test_dog_facts.rs
tests/integration_tests/fixtures/: fixtures_run.rs  fixtures_struct.rs
tests/utils/: test_context.rs  utils_setup.rs
