[package]
name = "animal_facts"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "animal_facts_api"
path = "src/main.rs"

[dependencies]
entities.workspace = true
business.workspace = true
gateway-pg.workspace = true
gateway-http.workspace = true
presenter-rest.workspace = true
app-web.workspace = true

[workspace]
members = [
    "crates/entities",
    "crates/business",
    "crates/gateway-pg",
    "crates/gateway-http",
    "crates/presenter-rest",
    "crates/app-web",
]

[workspace.dependencies]
entities = { path = "./crates/entities" }
business = { path = "./crates/business" }
gateway-pg = { path = "./crates/gateway-pg" }
gateway-http = { path = "./crates/gateway-http" }
presenter-rest = { path = "./crates/presenter-rest" }
app-web = { path = "./crates/app-web" }
# External dependencies versions
actix-web = "4"
actix-rt = "~2"
actix-http = "~3"
log = "~0.4.0"
env_logger = "~0.10"
failure = "~0.1"
sqlx = "~0.6"
serde = "~1.0"
serde_json = "~1.0"
async-trait = "~0.1"
diesel = "~2"
diesel_migrations = "~2"
dotenv = "~0.15"
r2d2 = "~0.8"
tokio = "~1"
thiserror = "~1.0"
derive_more = "~0.99"
reqwest = "0.11"
cargo-tarpaulin = "~0.25"
uuid = "~1"
mockall = "~0.11"
num_cpus = "1"
regex = "1"
