[package]
name = "animal_facts"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "animal_facts_api"
path = "src/main.rs"

[dependencies]
# app-domain.workspace = true
# app-core.workspace = true
# service-pg.workspace = true
# service-http.workspace = true
# presenter-rest.workspace = true
main-web.workspace = true

[workspace]
members = [
    "crates/app-domain",
    "crates/app-core",
    "crates/service-db",
    "crates/service-auth",
    "crates/presenter-rest",
    "crates/main-web",
]

[workspace.dependencies]
app-domain = { path = "./crates/app-domain" }
app-core = { path = "./crates/app-core" }
service-db = { path = "./crates/service-db" }
service-auth = { path = "./crates/service-auth" }
presenter-rest = { path = "./crates/presenter-rest" }
main-web = { path = "./crates/main-web" }
# External dependencies versions
actix-web = "4"
actix-rt = "2"
actix-http = "3"
log = "0.4"
env_logger = "0.10"
failure = "0.1"
sqlx = "0.6"
serde = "1"
serde_json = "1"
async-trait = "0.1"
dyno = "0.1"
dotenv = "0.15"
r2d2 = "0.8"
tokio = "1"
thiserror = "1"
derive_more = "0.99"
reqwest = "0.11"
cargo-tarpaulin = "0.25"
uuid = "1"
mockall = "0.11"
num_cpus = "1"
regex = "1"
