[package]
name = "adapters-spi-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain.workspace = true
application.workspace = true
# External dependencies
async-trait.workspace = true
diesel = { workspace = true, features = ["postgres", "r2d2", "uuidv07"] }
dotenv = "~0.15"
r2d2.workspace = true
