[package]
name = "app-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-domain.workspace = true
# External dependencies
async-trait.workspace = true

[dev-dependencies]
actix-rt.workspace = true
mockall.workspace = true
