[package]
name = "gateway-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities.workspace = true
business.workspace = true
# External dependencies
async-trait.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
