[package]
name = "gateway-pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities.workspace = true
business.workspace = true
# External dependencies
async-trait.workspace = true
dotenv = "~0.15"
regex.workspace = true
sqlx = { workspace = true, features = [
    "runtime-actix-rustls",
    "postgres",
    "offline",
    "uuid",
    "chrono",
] }
num_cpus.workspace = true
