[package]
name = "main-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-auth.workspace = true
service-db.workspace = true
presenter-rest.workspace = true
# External dependencies
actix-web = { workspace = true, features = ["openssl"] }
dotenv.workspace = true
env_logger.workspace = true

[dev-dependencies]
actix-rt.workspace = true
cargo-tarpaulin.workspace = true
futures = "*"
mockall.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["serde", "v4"] }
sqlx = { workspace = true, features = [
    "runtime-actix-rustls",
    "postgres",
    "offline",
    "uuid",
    "chrono",
] }
