[package]
name = "presenter-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-domain.workspace = true
app-core.workspace = true
# External dependencies
actix-web = { workspace = true, features = ["openssl"] }
derive_more.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
