[package]
name = "service-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-domain.workspace = true
app-core.workspace = true
# External dependencies
async-trait.workspace = true
dotenv = "~0.15"
regex.workspace = true
sqlx = { workspace = true, features = [
    "runtime-actix-rustls",
    "postgres",
    "offline",
    "uuid",
    "chrono",
] }
num_cpus.workspace = true
tokio.workspace = true
